com a resolução das 2 questões da prova simulada: 1. acréscimo do operador módulo '@' 2. acréscimo do comando repeat-ultil